@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-01T00:32:36Z",
-  "count" : 5,
+  "timestamp" : "2022-09-14T08:08:40Z",
+  "count" : 4,
   "count_minmax" : [ 1, 5 ],
-  "count_decinc" : [ -0, +5 ],
+  "count_decinc" : [ -1, +5 ],
   "uniques" : 3,
   "uniques_minmax" : [ 1, 3 ],
   "uniques_decinc" : [ -0, +3 ]
