@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-09-14T00:35:46Z",
+  "timestamp" : "2022-09-14T08:08:40Z",
   "count_outdated" : 1777,
   "uniques_outdated" : 538,
   "count" : 1805,
-  "uniques" : 554,
+  "uniques" : 555,
   "clones" : [
     {
       "timestamp": "2022-08-31T00:00:00Z",
-      "count": 5,
+      "count": 4,
       "count_minmax": [ 1, 5 ],
       "uniques": 3,
       "uniques_minmax": [ 1, 3 ]
@@ -86,6 +86,13 @@
       "timestamp": "2022-09-13T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
