@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-08-31T00:00:00Z",
-      "count": 5,
+      "count": 4,
       "uniques": 3
     },
     {
@@ -60,6 +60,11 @@
     {
       "timestamp": "2022-09-13T00:00:00Z",
       "count": 3,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-14T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
